add_subdirectory(scenario_0)

addtest(scenario_1 scenario_1.cpp)
addtest(scenario_2 scenario_2.cpp)
addtest(scenario_3 scenario_3.cpp)
addtest(scenario_4 scenario_4.cpp)
addtest(scenario_5 scenario_5.cpp)
addtest(scenario_6 scenario_6.cpp)
addtest(scenario_7 scenario_7.cpp)
addtest(pop_payouts_e2e pop_payouts_e2e.cpp)