add_subdirectory(e2e)
add_subdirectory(cache)
add_subdirectory(storage)
add_subdirectory(blockchain)
add_subdirectory(rewards)
add_subdirectory(third_party)
add_subdirectory(entities)
add_subdirectory(commands)
add_subdirectory(crypto)

addtest(genesis_block_test genesis_block_test.cpp)
addtest(streamutils_test streamutils_test.cpp)
addtest(base58_test base58_test.cpp)
addtest(base59_test base59_test.cpp)
addtest(uint_test uint_test.cpp)
addtest(stateless_validation_test stateless_validation_test.cpp)
addtest(arith_uint256_test arith_uint256_test.cpp)
addtest(keystone_util_test keystone_util_test.cpp)
addtest(validationstate_test validationstate_test.cpp)
addtest(alt-util_test alt-util_test.cpp)
addtest(mempool_test mempool_test.cpp)
set_test_cost(mempool_test 25000) # 25 sec
addtest(mempool_test_vtbs_contextgap mempool_test_vtbs_contextgap.cpp)
set_test_cost(mempool_test_vtbs_contextgap 150000) # 150 sec
addtest(mempool_getpop_test mempool_getpop_test.cpp)
set_test_cost(mempool_getpop_test 42000) # 42 sec
addtest(mempool_prioritization_test mempool_prioritization_test.cpp)
set_test_cost(mempool_prioritization_test 23500) # 23.5 sec
addtest(stateless_vtb_test stateless_vtb_test.cpp)
addtest(merkle_pool_test merkle_pool_test.cpp)
addtest(value_sorted_map_test value_sorted_map_test.cpp)
addtest(fmt_test fmt_test.cpp)
