add_library(entities OBJECT
        address.cpp
        atv.cpp
        btcblock.cpp
        btctx.cpp
        coin.cpp
        endorsements.cpp
        merkle_path.cpp
        output.cpp
        publication_data.cpp
        vbk_merkle_path.cpp
        vbkblock.cpp
        vbkpoptx.cpp
        vbktx.cpp
        vtb.cpp
        altblock.cpp
        popdata.cpp
        keystone_container.cpp
        pop_payouts.cpp
        context_info_container.cpp
        )
enable_clang_tidy(entities)
